--- a/src/styles/pages/_main.scss
+++ b/src/styles/pages/_main.scss
@@ -5,4 +5,17 @@
   outline: 1px solid $white;
   margin: 0 auto;
   margin-top: 20px;
+  transform: scale(3) translateY(50%);
+
+  @media (max-width: 768px) {
+    transform: scale(2) translateY(50%);
+  }
+
+  @media (max-width: 480px) {
+    transform: scale(1) translateY(50%);
+  }
+}
+
+.game__container canvas {
+  image-rendering: pixelated;
 }
